# referral-system

./: .env.example  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_02_12_1702-88560cbdb53a_create_user.py  2025_02_14_1212-26a6c0b368b9_create_user.py  2025_02_14_1330-7069fafcd776_referral_code.py  2025_02_14_1610-5f29260b8872_add_column_referral.py  2025_02_15_1247-7ec4df9cde48_add_column_referred_by.py
repositories/: referrals_code.py  users.py
settings/: __init__.py  config.py  db_helper.py
src/dependencies/: auth_user.py
src/exceptions/: referral_code.py  user_exceptions.py
src/models/: referral_code.py  user.py
src/routers/: referral_code.py  users.py
src/schemes/: referrals_code.py  users.py
src/services/: referral_code.py  users.py
src/utils/: auth.py
